<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelpyCar</string>

    <!-- RegisterActivity -->
    <string name="registerInputHint_name">Nombre</string>
    <string name="registerInputHint_mail">Mail</string>
    <string name="registerInputHint_cellPhone">Celular</string>
    <string name="registerInputHint_birthDate">Fecha de Nacimiento</string>
    <string name="registerInputHint_comuna">Comuna</string>
    <string name="registerInputHint_carBrand">Marca</string>
    <string name="registerInputHint_carModel">Modelo</string>
    <string name="registerInputHint_carYear">Año Automóvil</string>
    <string name="registerInputButton">Registrarse</string>
    <string name="registerInputSkip">No quiero registrarme</string>

    
    <!-- MenuActivity -->
    <string name="MenuActivityTittle">Asdf</string>
    
    <!-- LocalActivity -->
    <string name="horarioTitle">Horario:</string>
    <string name="mailTitle">Mail:</string>
    <string name="phone_numberTitle">Teléfono:</string>
    <string name="callingButton">Llamar</string>
    <string name="contactButton">Agregar a Contactos</string>
    <string name="mapButton">Mapa</string>
    <string name="localDescriptionTitle">Descripción:</string>
    <string name="ratingTittle">Califica este local:</string>
    <string name="button_report">Reportar local</string>

    
    <!-- Action Bar Strings -->
    <string name="action_menu_1">Menu Normal</string>
    <string name="action_menu_2">Menu Emergencias</string>
    <string name="listMenu_activity">List Menu</string>
    <string name="location">Ver en Mapa</string>
    <string name="search_hint">Buscar</string>
    
    <string name="search_title">Buscar</string>
	
    <!-- Colors -->
    <color name="actionBarBackground">#F3822C</color>
    <string name="title_activity_register">Registro</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="interstitial_ad_LocalActivity">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_ListMenuActivity">ca-app-pub-3940256099942544/6300978111</string>

</resources>
